Fix font size on mobile!

--- a/css/style.css
+++ b/css/style.css
@@ -332,7 +332,7 @@ nav a:hover { color: #f94a32; }
   h2 { font-size: 30px; }
 
   .description {
-  	font-size: 18em;
+  	font-size: 18px;
   	line-height: 25px;
   	padding: 20px 10px; }
 
